update-manager (1:0.111.1) jaunty; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - ensure that dontzap is installed on kubuntu (LP: #349263)
  * DistUpgrade/DistUpgradeController.py:
    - avoid conffile prompt because we enabled apport (LP: #348301)
    - deal better with apt ordering bugs and restore the system
      cleanly in this case
    - when commenting out third party sources, leave a space
      between previous comments (thanks to Sidnei da Silva)
  * UpdateManager/Core/MetaRelease.py:
    - ignore bad header line errors (LP: #353335)
  * UpdateManager/UpdateManager.py:
    - start minimized when run with --no-focus-on-map (LP: #353195)
    - set urgency hint when in the background (LP: #353195)
  * po/*.po:
    - updated translations from rosetta

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 31 Mar 2009 15:42:55 +0200

update-manager (1:0.111.0) jaunty; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py:
    - fix pre r6xx/7xx fglrx->ati transition
  * DistUpgrade/DistUpgradeQuirks.py:
    - fix incorrect variable name
  * DistUpgrade/DistUpgradeView.py:
    - remove old crash files on upgrade (thanks to
      Martin Pitt)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 24 Mar 2009 20:49:50 +0100

update-manager (1:0.110.1) jaunty; urgency=low

  * DistUpgrade/DistUpgrade.cfg.hardy:
    - support hardy->jaunty upgrade for kubuntu
  * po/POTFILES.{in,missing}:
    - add missing files (thanks to Gabor Kelemen)
      LP: #347040
  * po/*.po:
    - updated translations from launchpad

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 23 Mar 2009 16:22:06 +0100

update-manager (1:0.110.0) jaunty; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - take changes in update-initramfs into account when
      calculating the space requirements in /boot (LP: #287826)
    - when doing the space calculation, show the required space
      for each directory (if multiple need more space) LP: #219416
  * DistUpgrade/DevelReleaseAnnouncement: