@@ -29,6 +29,9 @@ ForcedObsoletes=esound, esound-common, slocate, ksplash-engine-moodin, powernowd
 PostUpgradeRemove=libflashsupport
 PostInstallScripts=./xorg_fix_proprietary.py
 EnableApport=yes
+# this supported blacklisting certain versions to ensure we do not upgrade
+# to a known broken version. python2.6 was broken during intrepid->jaunty
+BadVersions=python2.6_2.6.1-1ubuntu8,python-central_0.6.11ubuntu5
 
 [KernelRemoval]
 Version=2.6.27
